...
        return tmpImageView
    }()

    private lazy var placeHolderImageView: UIImageView = {
        let tmpImageView = UIImageView()
        tmpImageView.contentMode = .scaleAspectFill
        tmpImageView.image = UIImage(named: "addImage")
        addSubview(tmpImageView)
        return tmpImageView
    }()

    var completion: ((Int) -> Void)?
    /// 图片索引
...
